--- a/imgServer/folders.html
+++ b/imgServer/folders.html
@@ -14,9 +14,9 @@
             <div class="md:w-1/5 mb-4 md:mb-0 md:pr-4">
                 <h2 class="text-xl font-bold mb-2">Image List</h2>
                 <div id="imageList" class="bg-gray-800 p-2 rounded-lg overflow-y-auto max-h-[85vh]"></div>
-                <button id="downloadAllBtn" class="mt-2 bg-blue-600 hover:bg-blue-700 text-white font-bold py-1 px-2 rounded w-full text-sm">
+                <!-- <button id="downloadAllBtn" class="mt-2 bg-blue-600 hover:bg-blue-700 text-white font-bold py-1 px-2 rounded w-full text-sm">
                     Download All
-                </button>
+                </button> -->
             </div>
             <div class="md:w-4/5">
                 <h2 class="text-xl font-bold mb-2">Selected Image</h2>
@@ -141,7 +141,7 @@
             }
         }
 
-        downloadAllBtn.addEventListener('click', downloadAllImages);
+        // downloadAllBtn.addEventListener('click', downloadAllImages);
 
         // Call displayImages when the script loads
         displayImages();
